--- a/lesson-2/index.html
+++ b/lesson-2/index.html
@@ -18,7 +18,7 @@
         <p>
           Обчислити значення виразів:
         </p>
-        <img target="_blank" src="/lesson-2/task-0.jpg" alt="screen">
+        <img target="_blank" src="../lesson-2/task-0.jpg" alt="screen">
       </div>
     </li>
     <li>
