--- a/lesson-2/tasks/task0.html
+++ b/lesson-2/tasks/task0.html
@@ -15,7 +15,7 @@
     <p>
       Обчислити значення виразів:
     </p>
-    <img src="/lesson-2/task-0.jpg" alt="screen">
+    <img src="./task-0.jpg" alt="screen">
   </div>
 
   <script>
