--- a/lesson-2/tasks/task2.html
+++ b/lesson-2/tasks/task2.html
@@ -19,7 +19,7 @@
   </div>
 
   <script>
-    let yearBirth = parseInt(prompt('Введіть рік народження', 0))
+    let yearBirth = parseInt(prompt('Введіть рік народження (наприклад: 1983)'))
     let currentYear = new Date().getFullYear()
 
     let numberOfYears = currentYear - yearBirth
