--- a/lesson-2/tasks/task3.html
+++ b/lesson-2/tasks/task3.html
@@ -20,7 +20,7 @@
 
   <script>
     let unitCost = parseFloat(prompt('Введіть вартість одиниці товару:'))
-    let quantityGoods = parseInt(prompt('Введіть кількість товару:'))
+    let quantityGoods = parseInt(prompt('Введіть кількість товару:', 1))
     const VAT_PERSENT = 5
 
     let totalСost = unitCost * quantityGoods
