--- a/lesson-2/tasks/task6.html
+++ b/lesson-2/tasks/task6.html
@@ -58,11 +58,11 @@
 
   <script>
 
-    let oneProduct = parseFloat(prompt('Введіть вартість першого товару:', 1))
+    let oneProduct = parseFloat(prompt('Введіть вартість першого товару:'))
     let oneProductQuantity = parseInt(prompt('Введіть кількість першого товару:', 1))
-    let twoProduct = parseFloat(prompt('Введіть вартість другого товару:', 1))
+    let twoProduct = parseFloat(prompt('Введіть вартість другого товару:'))
     let twoProductQuantity = parseInt(prompt('Введіть кількість другого товару:', 1))
-    let threeProduct = parseFloat(prompt('Введіть вартість третього товару:', 1))
+    let threeProduct = parseFloat(prompt('Введіть вартість третього товару:'))
     let threeProductQuantity = parseInt(prompt('Введіть кількість третього товару:', 1))
 
     let oneCostProduct = oneProduct * oneProductQuantity
