--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <li>
       <a target="_blank" href="./lesson-2/index.html">ДЗ №2</a>
     </li>
+    <li>
+      <a target="_blank" href="./lesson-3/index.html">ДЗ №3</a>
+    </li>
   </ol>
 </body>
 
