--- a/index.html
+++ b/index.html
@@ -5,16 +5,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    h2 {
+      text-underline-offset: 5px;
+    }
+  </style>
 </head>
 
 <body>
   <h1>Виконані домашні завдання Іванюк А.В.</h1>
   <ol>
     <li>
-      <a target="_blank" href="./lesson-2/index.html">ДЗ №2</a>
+      <h2>
+        <a target="_blank" href="./lesson-2/index.html">ДЗ №2</a>
+      </h2>
     </li>
     <li>
-      <a target="_blank" href="./lesson-3/index.html">ДЗ №3</a>
+      <h2>
+        <a target="_blank" href="./lesson-3/index.html">ДЗ №3</a>
+      </h2>
     </li>
   </ol>
 </body>
