--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
     <li>
       <h2>
         <a target="_blank" href="./lesson-3/index.html">ДЗ №3</a>
+        <ul>
+          <li>
+            <h5>
+              <a target="_blank" href="./lesson-3/task_dop.html">Додаткові задачі</a>
+            </h5>
+          </li>
+        </ul>
       </h2>
     </li>
   </ol>
