--- a/lesson-3/task_dop.html
+++ b/lesson-3/task_dop.html
@@ -4,24 +4,50 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ДЗ №3</title>
+  <title>ДЗ №3 Додаткові задачі</title>
 </head>
 
 <body>
-  <h1>ДЗ №3</h1>
+  <h1>ДЗ №3 Додаткові задачі</h1>
   <ol>
     <li>
       <h3>
-        <a target="_blank" href="./tasks/task1.html">Задача 1</a>
+        <a target="_blank" href="./tasks_dop/task1.html">Задача 1</a>
       </h3>
       <div>
         <p>
-          З клавіатури вводяться імена двох дітей та кількість у них цукерок. Вивести не екран ім’я тієї дитини, у якої
-          кількість цукерок є більшою, або вивести, що кількість однакова.
+          На екран виводиться меню: <br>
+          1. Веселий <br>
+          2. Сумний <br>
+          3. Обурений <br> <br>
+          Користувач вводить номер пункту меню і на екрані з’являється відповідне зображення смайла.
         </p>
       </div>
     </li>
     <li>
+      <h3>
+        <a target="_blank" href="./tasks_dop/task2.html">Задача 2</a>
+      </h3>
+      <div>
+        <p>
+          Комп’ютер випадковим чином вибирає початок і кінець проміжку (проміжок повинен знаходитися в межах від 1 до
+          100). Користувач вводить число і виграє, якщо число знаходиться у цьому проміжку, або розташоване від нього
+          (від лівого або правого краю) не більше ніж на 10.
+        </p>
+      </div>
+    </li>
+    <li>
+      <h3>
+        <a target="_blank" href="./tasks_dop/task3.html">Задача 3</a>
+      </h3>
+      <div>
+        <p>
+          Комп’ютер загадує число від 1 до 10. Двоє користувачів надають свої відповіді. Виграє той, у кого число
+          знаходиться ближче до загаданого комп’ютером числа.
+        </p>
+      </div>
+    </li>
+    <!-- <li>
       <h3>
         <a target="_blank" href="./tasks/task2.html">Задача 2</a>
       </h3>
@@ -83,7 +109,7 @@
           З клавіатури вводиться номер місяця. Вивести до якої пори він відноситься
         </p>
       </div>
-    </li>
+    </li> -->
   </ol>
 </body>
 
