--- a/lesson-3/tasks/task3.html
+++ b/lesson-3/tasks/task3.html
@@ -26,25 +26,37 @@
     let randomNumber = MIN_NUM + Math.floor(Math.random() * (MAX_NUM - MIN_NUM + 1))
 
     let enterNumberOne = parseInt(prompt('Введіть число від 1 до 5, перша спроба:'))
-    if (enterNumberOne === randomNumber) {
-      alert('Вітаю, ви вгадали.')
-      document.write(`
-      <strong>Ви вгадали з 1-ої спроби, крутяк! Це число ${randomNumber}.</strong>
-    	`)
-    }
-    else {
-      alert('Не вгадали, у вас є ще одна спроба, щасти) \n\nНатисніть "ENTER" або "OK" для продовження.')
-      let enterNumberTwo = parseInt(prompt('Введіть число від 1 до 5, друга спроба'))
-      if (enterNumberTwo === randomNumber) {
+
+    if (enterNumberOne >= MIN_NUM && enterNumberOne <= MAX_NUM) {
+      if (enterNumberOne === randomNumber) {
         alert('Вітаю, ви вгадали.')
         document.write(`
-      <strong>Ви вгадали з 2-ої спроби, молодець! Це число ${randomNumber}.</strong>
-    	`)
+        <strong>Ви вгадали з 1-ої спроби, крутяк! Це число ${randomNumber}.</strong>
+        `)
       }
-      else
-        alert('На жаль, ви не вгадали.')
-    }
-
+      else {
+        alert('Не вгадали, у вас є ще одна спроба, щасти) \n\nНатисніть "ENTER" або "OK" для продовження.')
+        let enterNumberTwo = parseInt(prompt('Введіть число від 1 до 5, друга спроба'))
+        if (enterNumberTwo >= MIN_NUM && enterNumberTwo <= MAX_NUM) {
+          if (enterNumberTwo === randomNumber) {
+            alert('Вітаю, ви вгадали.')
+            document.write(`
+        <strong>Ви вгадали з 2-ої спроби, молодець! Це число ${randomNumber}.</strong>
+        `)
+          }
+          else {
+            alert('На жаль, ви не вгадали.')
+            document.write(`
+              Перше введене число : ${enterNumberOne}<br>
+              Друге введене число : ${enterNumberTwo} <br>
+              Рандомне число : ${randomNumber}`)
+          }
+        }
+        else
+          alert('Помилка!!! Введіть число від 1 до 5')
+      }
+    } else
+      alert('Помилка!!! Введіть число від 1 до 5')
 
   </script>
 
