--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul>
           <li>
             <h5>
-              <a target="_blank" href="./lesson-3/task_dop.html">Додаткові задачі</a>
+              <a target="_blank" href="./lesson-3/task_dop.html">Додаткові задачі ДЗ №3</a>
             </h5>
           </li>
         </ul>
