--- a/lesson-3/task_dop.html
+++ b/lesson-3/task_dop.html
@@ -31,7 +31,8 @@
       <div>
         <p>
           Комп’ютер випадковим чином вибирає початок і кінець проміжку (проміжок повинен знаходитися в межах від 1 до
-          100). Користувач вводить число і виграє, якщо число знаходиться у цьому проміжку, або розташоване від нього
+          100). <br>Користувач вводить число і виграє, якщо число знаходиться у цьому проміжку, або розташоване від
+          нього
           (від лівого або правого краю) не більше ніж на 10.
         </p>
       </div>
@@ -42,8 +43,25 @@
       </h3>
       <div>
         <p>
-          Комп’ютер загадує число від 1 до 10. Двоє користувачів надають свої відповіді. Виграє той, у кого число
+          Комп’ютер загадує число від 1 до 10.<br> Двоє користувачів надають свої відповіді. Виграє той, у кого число
           знаходиться ближче до загаданого комп’ютером числа.
+        </p>
+      </div>
+    </li>
+    <li>
+      <h3>
+        <a target="_blank" href="./tasks_dop/task4.html">Задача 4</a>
+      </h3>
+      <div>
+        <p>
+          Морський бій. Ворожий корабель, може знаходитись в одному із квадратів (кількість квадратів вводиться з
+          клавіатури), які розташовані лінійно (один за одним) на річці.<br>
+          Позиція корабля визначається комп’ютером випадковим чином.<br>
+          Гра відбувається за правилами:<br>
+          1. якщо користувач стріляє у заданий квадрат (тобто вводиться номер квадрата), то корабель потоплено;<br>
+          2. якщо корабель знаходиться у сусідньому по відношенню до квадрата, де знаходиться корабель, то корабель
+          пошкоджено (про це повідомляємо користувача).<br>
+          За два постріли спробувати потопити корабель.
         </p>
       </div>
     </li>
