--- a/lesson-3/tasks_dop/task4.html
+++ b/lesson-3/tasks_dop/task4.html
@@ -69,7 +69,7 @@
             else
               alert('Гра завершена!\nНе влучив, наступного разу пощастить.')
           }
-          //Програма зупинена значення(постріл) не в межах поля
+          //Гра зупинена значення(постріл) за межами поля
           else
             alert(`Не корректно введене значення!!! Постріл має бути в межах ігрового поля від 1 до ${playingFieldSize}`)
         }
@@ -90,15 +90,15 @@
             else
               alert('Гра завершена!\nНе влучив, наступного разу пощастить.')
           }
-          //Програма зупинена значення(постріл) не в межах поля
+          //Гра зупинена значення(постріл) за межами поля
           else
             alert(`Не корректно введене значення!!! Постріл має бути в межах ігрового поля від 1 до ${playingFieldSize}`)
         }
-        //Програма зупинена значення(постріл) не в межах поля
+        //Гра зупинена значення(постріл) за межами поля
       } else
         alert(`Не корректно введене значення!!! Постріл має бути в межах ігрового поля від 1 до ${playingFieldSize}`)
     }
-    //Програма зупинена не корректно введено розмір поля
+    //Гра зупинена не корректно введено розмір поля
     else
       alert('Введена к-сть квадратів поля меньше 2!!!')
 
