--- a/lesson-3/tasks_dop/task4.html
+++ b/lesson-3/tasks_dop/task4.html
@@ -28,7 +28,7 @@
 
   <script>
 
-    //Формуємо поле для гри
+    //Ввод користувачем значення розміру ігрового поля
     let playingFieldSize = parseInt(prompt('Введідь к-сь квадратів ігрового поля, минімально допустиме значення ігрового поля - 2 квадрати :'))
 
     //Перевірка коррекності вводу розміру ігрового поля
@@ -44,7 +44,7 @@
       console.log(shipPositionRandom);
 
 
-      //Ввод значення першого пострілу
+      //Ввод користувачем значення першого пострілу
       let userShotOne = parseInt(prompt(`Гра почалася. \nЗробіть свій перший постріл від 1 до ${playingFieldSize}.`))
 
       //Перевірка першого значення(пострілу), що воно в межах поля
@@ -55,7 +55,7 @@
         //Пошкодження корабля (або перед ,або за кораблем)
         else if (userShotOne === shipPositionRandom - 1 || userShotOne === shipPositionRandom + 1) {
           alert('Корабель пошкоджено! Приготуйся до другого пострілу.')
-          //Ввод значення другого пострілу
+          //Ввод користувачем значення другого пострілу
           let userShotTwo = parseInt(prompt(`Зробіть свій другий постріл від 1 до ${playingFieldSize}.`))
           //Перевірка другого значення(пострілу), що воно в межах поля
           if (userShotTwo > 0 && userShotTwo <= playingFieldSize) {
@@ -76,7 +76,7 @@
         //Другий постріл після промаху першого
         else {
           alert('Не влучив, приготуйся до другого пострілу.')
-          //Ввод значення другого пострілу
+          //Ввод користувачем значення другого пострілу
           let userShotTwo = parseInt(prompt(`Зробіть свій другий постріл від 1 до ${playingFieldSize}.`))
           //Перевірка другого значення(пострілу), що воно в межах поля
           if (userShotTwo > 0 && userShotTwo <= playingFieldSize) {
