--- a/lesson-3/task_dop.html
+++ b/lesson-3/task_dop.html
@@ -65,6 +65,17 @@
         </p>
       </div>
     </li>
+    <li>
+      <h3>
+        <a target="_blank" href="./tasks_dop/task5.html">Задача 5</a>
+      </h3>
+      <div>
+        <p>
+          Модифікувати попередню задачу з можливістю після пострілу переміщення корабля у випадковим чином вибрану
+          сусідню клітинку (якщо звичайно корабель не було потоплено за першим разом).
+        </p>
+      </div>
+    </li>
     <!-- <li>
       <h3>
         <a target="_blank" href="./tasks/task2.html">Задача 2</a>
