--- a/lesson-3/tasks_dop/task4.html
+++ b/lesson-3/tasks_dop/task4.html
@@ -14,13 +14,13 @@
 
 
   <p>
-    Морський бій. Ворожий корабель, може знаходитись в одному із квадратів (кількість квадратів вводиться з клавіатури),
-    які розташовані лінійно (один за одним) на річці.
-    Позиція корабля визначається комп’ютером випадковим чином.
-    Гра відбувається за правилами:
-    1. якщо користувач стріляє у заданий квадрат (тобто вводиться номер квадрата), то корабель потоплено;
-    2. якщо корабель знаходиться у сусідньому по відношенню до квадрата, де знаходиться корабель, то корабель пошкоджено
-    (про це повідомляємо користувача).
+    Морський бій. Ворожий корабель, може знаходитись в одному із квадратів (кількість квадратів вводиться з
+    клавіатури), які розташовані лінійно (один за одним) на річці.<br>
+    Позиція корабля визначається комп’ютером випадковим чином.<br>
+    Гра відбувається за правилами:<br>
+    1. якщо користувач стріляє у заданий квадрат (тобто вводиться номер квадрата), то корабель потоплено;<br>
+    2. якщо корабель знаходиться у сусідньому по відношенню до квадрата, де знаходиться корабель, то корабель
+    пошкоджено (про це повідомляємо користувача).<br>
     За два постріли спробувати потопити корабель.
 
   </p>
