--- a/lesson-3/task_dop.html
+++ b/lesson-3/task_dop.html
@@ -63,6 +63,7 @@
           пошкоджено (про це повідомляємо користувача).<br>
           За два постріли спробувати потопити корабель.
         </p>
+        <img src="./tasks_dop/img/task-4.jpg" alt="image">
       </div>
     </li>
     <li>
@@ -76,69 +77,23 @@
         </p>
       </div>
     </li>
-    <!-- <li>
+    <li>
       <h3>
-        <a target="_blank" href="./tasks/task2.html">Задача 2</a>
+        <a target="_blank" href="./tasks_dop/task6.html">Задача 6</a>
       </h3>
       <div>
         <p>
-          З клавіатури вводиться ціна товару і кількість грошей. Якщо грошей не вистачає то відмовляємо у покупці,
-          інакше, якщо ще залишаються гроші, то пропонуємо купити лотерею за 4 грн.
+          Полювання. Заєць знаходиться у верхньому лівому кутку поля. Поле складається з двох рядків і двох стовпців.
+        </p>
+        <img src="./tasks_dop/img/task-6.jpg" alt="image">
+        <p>
+          За один крок заєць може стрибнути у будь-яку із вільних клітинок. Користувач ставить пастку вказуючи номер
+          рядка і стовпця клітинки. Якщо заєць потрапляє у пастку, то користувач виграв і отримав 100 балів. Якщо
+          користувач зловить зайця за другою спробою, то одержує 50 балів.
         </p>
       </div>
     </li>
-    <li>
-      <h3>
-        <a target="_blank" href="./tasks/task3.html">Задача 3</a>
-      </h3>
-      <div>
-        <p>
-          Випадковим чином генерується число від 1 до 5. Спробуйте вгадати число за 2 спроби.
-        </p>
-      </div>
-    </li>
-    <li>
-      <h3>
-        <a target="_blank" href="./tasks/task4.html">Задача 4</a>
-      </h3>
-      <div>
-        <p>
-          З клавіатури вводиться вік людини. Вивести на екран ким він є (дитиною у садочку, школярем, студентом,
-          працівником, пенсіонером).
-        </p>
-      </div>
-    </li>
-    <li>
-      <h3>
-        <a target="_blank" href="./tasks/task5.html">Задача 5</a>
-      </h3>
-      <div>
-        <p>
-          З клавіатури вводиться назва категорії водія (А-мотоцикл, В-легковий автомобіль, С-вантажний автомобіль).
-          Вивести на екран назву транспортного засобу, яким він може керувати.
-        </p>
-      </div>
-    </li>
-    <li>
-      <h3>
-        <a target="_blank" href="./tasks/task6.html">Задача 6</a>
-      </h3>
-      <div>
-        <p>
-          З клавіатури вводиться номер дня тижня. Вивести на екран назву дня.
-        </p>
-      </div>
-    </li>
-    <li>
-      <h3>
-        <a target="_blank" href="./tasks/task7.html">Задача 7</a>
-      </h3>
-      <div>
-        <p>
-          З клавіатури вводиться номер місяця. Вивести до якої пори він відноситься
-        </p>
-      </div>
-    </li> -->
+
   </ol>
 </body>
 
