--- a/lesson-3/tasks_dop/task4.html
+++ b/lesson-3/tasks_dop/task4.html
@@ -22,8 +22,8 @@
     2. якщо корабель знаходиться у сусідньому по відношенню до квадрата, де знаходиться корабель, то корабель
     пошкоджено (про це повідомляємо користувача).<br>
     За два постріли спробувати потопити корабель.
-
   </p>
+  <img src="./img/task-4.jpg" alt="image">
 
 
   <script>
