--- a/lesson-3/tasks/task3.html
+++ b/lesson-3/tasks/task3.html
@@ -41,8 +41,7 @@
           if (enterNumberTwo === randomNumber) {
             alert('Вітаю, ви вгадали.')
             document.write(`
-        <strong>Ви вгадали з 2-ої спроби, молодець! Це число ${randomNumber}.</strong>
-        `)
+            <strong>Ви вгадали з 2-ої спроби, молодець! Це число ${randomNumber}.</strong>`)
           }
           else {
             alert('На жаль, ви не вгадали.')
