--- a/lesson-3/tasks/task6.html
+++ b/lesson-3/tasks/task6.html
@@ -20,11 +20,11 @@
 
   <script>
 
-    let enterNumberWeek = parseInt(prompt('Введіть номер дня тижня:'))
+    let enterNumberDay = parseInt(prompt('Введіть номер дня тижня:'))
 
     let result
 
-    switch (enterNumberWeek) {
+    switch (enterNumberDay) {
       case 1:
         result = 'Понеділок'
         break;
