--- a/lesson-3/tasks/task2.html
+++ b/lesson-3/tasks/task2.html
@@ -40,9 +40,9 @@
         let numberTicketsBuy = parseInt(restMoney / lotteryTicketPrice)
         alert(`Ви придбали товар, вашої решти вистачає на купівлю щасливої лотереї у кількості : ${numberTicketsBuy}.`)
       }
-      else {
+      else
         alert(`Ви придбали товар, вашої решти не вистачає на купівлю щасливої лотереї.`)
-      }
+
     }
 
 
