--- a/lesson-3/tasks/task5.html
+++ b/lesson-3/tasks/task5.html
@@ -40,9 +40,7 @@
         break;
     }
 
-    document.write(`
-    Можна керувати : <strong>${result}.</strong>
-    	`)
+    document.write(`Можна керувати : <strong>${result}.</strong>`)
 
 
   </script>
