--- a/lesson-3/tasks/task6.html
+++ b/lesson-3/tasks/task6.html
@@ -50,9 +50,7 @@
         result = 'Номер тижня некоректний'
         break;
     }
-    document.write(`
-          Назва дня : <strong>${result}.</strong>
-        `)
+    document.write(`Назва дня : <strong>${result}.</strong>`)
 
 
 
