--- a/lesson-3/tasks/task7.html
+++ b/lesson-3/tasks/task7.html
@@ -49,9 +49,7 @@
         result = 'Номер місяця некоректний'
         break;
     }
-    document.write(`
-      Пора року : <strong>${result}.</strong>
-    `)
+    document.write(`Пора року : <strong>${result}.</strong>`)
 
   </script>
 
