--- a/lesson-3/tasks_dop/task1.html
+++ b/lesson-3/tasks_dop/task1.html
@@ -46,9 +46,8 @@
         break;
     }
     if (menuNum > 0 && menuNum <= 3)
-      document.write(`
-        <div class='smile'>${result}</div>
-      `)
+      document.write(`<div class='smile'>${result}</div>`)
+
   </script>
 
 </body>
