--- a/lesson-3/tasks_dop/task4.html
+++ b/lesson-3/tasks_dop/task4.html
@@ -100,7 +100,7 @@
     }
     //Гра зупинена не корректно введено розмір поля
     else
-      alert('Введена к-сть квадратів поля меньше 2!!!')
+      alert('Введена к-сть квадратів поля МЕНЬШЕ 2!!!')
 
 
   </script>
