--- a/lesson-3/tasks/task1.html
+++ b/lesson-3/tasks/task1.html
@@ -26,7 +26,7 @@
     let secondNameChild = prompt('Введіть ім\'я другої дитини:')
     let numberSweetsSecondChild = parseInt(prompt('Введіть кількість цукерок другої дитини:', 1))
 
-    if (numbeSweetsFirstChild === numbeSweetsSecondChild)
+    if (numberSweetsSecondChild === numberSweetsSecondChild)
       alert('Кількість цукерок однакова.')
     else if (numberSweetsFirstChild > numberSweetsSecondChild)
       alert(`У ${firstNameChild} більше цукерок ніж у ${secondNameChild}`)
