--- a/lesson-3/tasks/task4.html
+++ b/lesson-3/tasks/task4.html
@@ -28,22 +28,17 @@
     let studentAgeRange = 23
     let workerAgeRange = 60
 
-    if (1 <= personAge && personAge <= 120) {
-      let result
-      if (personAge < childAgeRange)
-        result = 'Дитина'
-      else if (personAge < schoolboyAgeRange)
-        result = 'Школяр'
-      else if (personAge < studentAgeRange)
-        result = 'Студент'
-      else if (personAge < workerAgeRange)
-        result = 'Працівник'
-      else if (personAge >= workerAgeRange)
-        result = 'Пенсіонер'
-      document.write(result)
+
+    if (1 < personAge && personAge < 120) {
+      if (personAge <= childAgeRange) alert('Дитина')
+      else if (personAge <= schoolboyAgeRange) alert('Школяр')
+      else if (personAge <= studentAgeRange) alert('Студент')
+      else if (personAge <= workerAgeRange) alert('Працівник')
+      else alert('Пенсіонер')
     }
     else
       document.write('Введено некоректний вік')
+
 
   </script>
 
